# koyumi0601.github.io

./: .gitignore  Gemfile  _config.yml
_data/: navigation.yml
_pages/: 404.md  category-archive.md  portfolio.md  tag-archive.md
_pages/categories/: category-blog.md  category-book.md  category-cuda.md  category-dataanalysis.md  category-datastructure.md  category-designpattern.md  category-digitalsignalprocessing.md  category-economics.md  category-electricalcircuit.md  category-housechores.md  category-imagesignalprocessing.md  category-labview.md  category-language.md  category-linearalgebra.md  category-machinelearning.md  category-math.md  category-mathmaticalphysics.md  category-medicalscience.md  category-msoffice.md  category-numericalmethod.md  category-physics.md  category-probability.md  category-python.md  category-setup.md  category-sql.md  category-tensor.md  category-visualbasicdotnet.md  jekyll.md
_posts/Blog/: 2023-07-31-Github-Blog-Generation.md  2023-08-02-Github-Blog-Posting.md  2023-08-02-Github-Blog-Posting2.md  2023-08-03-Github-Blog-Generation-LocalHost.md  2023-08-03-Github-Blog-Posting-AuthorProfile.md  2023-08-03-Github-Blog-Posting-Category-Tag.md  2023-08-03-Github-Blog-Posting-CodeHighlight.md  2023-08-03-Github-Blog-Posting-Equation.md  2023-08-03-Github-Blog-Posting-Font.md  2023-08-03-Github-Blog-Posting-GoogleAnalytics.md  2023-08-03-Github-Blog-Posting-Image.md  2023-08-03-Github-Blog-Posting-Notice.md  2023-08-03-Github-Blog-Posting-Portfolio.md  2023-08-03-Github-Blog-Posting-Search.md  2023-08-03-Github-Blog-Posting-Sidebar.md  2023-08-03-Github-Blog-Posting-TOC.md  2023-08-03-Github-Blog-Posting-Table.md  2023-08-03-Github-Blog-Posting-Youtube.md  2023-09-11-Github-Blog-Posting-character.md  2024-02-26-batchfile-openfolder-vscode.md
_posts/Book/: 2023-08-10-RewindingWorldHistory.md  2023-08-10-RewindingWorldHistory1_Dreyfus.md  2023-08-10-readITzine6.md  2023-08-11-WorkingHard.md  2023-08-17-Edgar-Degas.md  2023-08-19-Antoni-Gaudi.md  2023-08-19-AugusteRenoir.md  2023-08-19-BasicArtSeries.md  2023-08-19-ClaudeMonet.md  2023-08-19-anger.md  2023-08-19-rene-magritte.md  2023-08-21-Deduction-Induction.md  2023-08-21-Dialectic.md  2023-08-21-Dialectical-materialism.md  2023-08-21-Freud.md  2023-08-21-Sartre.md  2023-08-21-TheMostImportantPeopleoftheCentury.md  2023-08-28-AntoniGaudi-2.md  2023-08-30-Poem.md  2023-08-30-TrendKorea2022.md  2023-09-01-1L-tears.md  2023-09-03-Poem-Newspaper.md  2023-09-04-RewindingWorldHistory2_Sarajevo.md  2023-09-05-RewindingWorldHistory3_Russia.md.md  2023-09-05-RewindingWorldHistory4_GreatDepression.md  2023-09-05-RewindingWorldHistory5_China.md.md  2024-03-30-Justice.md
_posts/Cuda/: 2023-12-28-cuda-env.md  2024-01-03-cuda-study.md  2024-01-08-cuda-python.md  2024-01-10-cuda-env-window.md  2024-01-10-cuda-nvcc.md  2024-01-12-cuda-extension.md  2024-01-12-cuda-npp.md  2024-01-12-cuda-python-dll.md  2024-02-22-cuda-vector.md  2024-02-26-cuda-dcmtk-opencv.md
_posts/Cuda/practice_009_cmake/CMakeProject1/: CMakeLists.txt  cuda_code.cu  python_script.py
_posts/Cuda/practice_028_project_tree_consideration/project/: CMakeLists.txt
_posts/Cuda/practice_028_project_tree_consideration/project/logs/: log_2024_02_16_14_43_22.txt
_posts/Cuda/practice_028_project_tree_consideration/project/src/: main.cpp
_posts/Cuda/practice_028_project_tree_consideration/project/src/database/: database_manager.cpp  database_manager.h  getting_started_database_sqlite3.md  myDb.db  query2
_posts/Cuda/practice_028_project_tree_consideration/project/src/imaging_system/: image_filter.cpp  image_filter.h  image_loader.cpp  image_loader.h  image_transform.cpp  image_transform.h  ocr.cpp  ocr.h
_posts/Cuda/practice_028_project_tree_consideration/project/src/logger/: logger.cpp  logger.h
_posts/Cuda/practice_028_project_tree_consideration/project/src/networking/: index.html  network_manager.cpp  network_manager.h
_posts/Cuda/practice_028_project_tree_consideration/project/src/userinterface/: mainwindow.cpp  mainwindow.h
_posts/Data/: 2023-08-01-Nrrd.md  2023-08-02-Dicom.md
_posts/DataAnalysis/: 2023-08-14-crawling-dynamicwebpage.md  2023-08-14-crawling-naverapi.md  2023-08-14-crawling-publicinfo.md  2023-08-14-crawling-publicinfoapi.md  2023-08-14-crawling-staticwebpage.md  2023-08-14-dataanalysis.md  2023-08-15-statisticalanalysis.md  2023-08-18-crawling-naverapi.md
_posts/Dictionary/: 2023-07-31-Dictionary-Medical-Imaging.md
_posts/HouseChores/: 2023-08-15-Menu.md  2023-08-15-RandomMenu-Flask.md  2023-08-17-foodshopping.md  2023-08-17-hometraining.md  2023-08-17-laundry.md  2023-08-19-cooking-recipe.md  2023-08-19-site.md  2023-08-20-App.md  2023-08-20-Shopping.md  2023-08-20-ShoppingList.md  2023-08-20-footcare.md  2023-08-29-Cleaning-Bathroom.md  2023-08-30-Cleaning-Shoe.md  2023-09-01-Car.md  2023-09-01-ssg.md  2023-09-05-Phone.md  2023-09-06-NavigationUpdate.md  2023-09-11-Cleaning-dailyroutine.md  2023-09-13-stock.md  2023-09-15-perm.md  2023-09-19-diet.md  2023-09-19-food-calories.md  2023-09-23-trip.md  2023-09-25-gardening.md  2023-09-26-company.md  2023-09-27-interior.md  2023-10-01-pc-maintenance.md  (+8 more)
_posts/ImageSignalProcessing/OCR_OpencCV_Cpp/: CMakeLists.txt  basic_ocr  basic_ocr.cpp
_posts/ImageSignalProcessing/QT/Practice_class/: CMakeLists.txt  main.cpp
_posts/ImageSignalProcessing/QT/Tesseract_OCR_C_OPENGL_6_fail/: CMakeLists.txt  Makefile  Tesseract_OCR_C  candidate.cpp  main.cpp  mainwindow.cpp
_posts/ImageSignalProcessing/QT/Tesseract_OCR_C_OPENGL_6_fail/.cmake/api/v1/reply/: cache-v2-4d5c6bb079a6d2ea9899.json  cmakeFiles-v1-337d4f11a81851be6c2e.json  codemodel-v2-914be348df6c08e4c750.json  directory-.-93a222907bc50b547473.json  index-2024-01-30T12-58-31-0251.json  target-Tesseract_OCR_C-794417e1e83386dbc959.json  target-Tesseract_OCR_C_autogen-bbdc8e67cd1fb426f24d.json
_posts/ImageSignalProcessing/QT/Tesseract_OCR_C_OPENGL_6_fail/.qt/: QtDeploySupport.cmake
_posts/Installation/Qt-Linux/Qt_practice_01/: CMakeLists.txt  main.cpp
_sass/: minimal-mistakes.scss
docs/: configuration.md
(+2148 files in other folders)
